# doc-diff-tracker

./: .env.example  .example_html_diff_report.json  .example_report.json  .gitignore  README.md  pyproject.toml
config/: system.yaml
deployment/config-templates/: graphql_polling.example.yaml
deployment/docker/: Dockerfile.poller  README.md  docker-compose.yml
src/doc_diff_tracker/: cli.py
src/doc_diff_tracker/compare/: __init__.py  lineage.py  semantic_diff.py
src/doc_diff_tracker/extract/: __init__.py  block_differ.py  content_extractor.py
src/doc_diff_tracker/graphql/: __init__.py  client.py  config.py  pipeline.py  scheduler.py  state.py
src/doc_diff_tracker/models/: __init__.py  html_diff.py
src/doc_diff_tracker/output/: reporting.py
src/doc_diff_tracker/utils/: cli_helpers.py  constants.py  inventory.py  scanner.py
src/docta/cli/: __init__.py  _error_handling.py  daemon.py  diff.py  qa.py
src/docta/graphql/: client.py  fetcher.py
src/docta/utils/: constants.py
src/qa_generation/: __init__.py  cli.py
src/qa_generation/config/: __init__.py  settings.py
src/qa_generation/generators/: __init__.py  base.py  ragas_generator.py
src/qa_generation/ingest/: __init__.py  added_doc_converter.py  added_doc_processor.py  diff_report_reader.py  snippet_extractor.py
src/qa_generation/llm/: __init__.py  provider.py
src/qa_generation/models/: __init__.py  extraction_stats.py  qa_pair.py  report_ingestion.py
src/qa_generation/output/: __init__.py  qa_writer.py
src/qa_generation/pipeline/: __init__.py  orchestrator.py
(+2 files in other folders)
