[project]
name = "doc-diff-tracker"
version = "0.1.0"
description = "Minimal proof of concept for version-aware documentation delta tracking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pydantic>=2.8.0",
  "rapidfuzz>=3.9.0",
  "typer>=0.12.0",
]

[project.scripts]
doc-delta-poc = "doc_delta_poc.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
